Add search implementation for web.

--- a/web/conf/application.conf
+++ b/web/conf/application.conf
@@ -56,3 +56,8 @@ logger.play=INFO
 # Logger provided to your application:
 logger.application=DEBUG
 
+# custom
+
+pediaroute.title_file="modules/core/tokyo/title.dat"
+pediaroute.forward_link_file="modules/core/tokyo/forwardlinks.dat"
+pediaroute.backward_link_file="modules/core/tokyo/backwardlinks.dat"
