Add to use same titles.

--- a/web/conf/application.conf
+++ b/web/conf/application.conf
@@ -59,5 +59,6 @@ logger.application=DEBUG
 # custom
 
 pediaroute.title_file="modules/core/tokyo/title.dat"
+pediaroute.same_title_file="modules/core/tokyo/sametitle.dat"
 pediaroute.forward_link_file="modules/core/tokyo/forwardlinks.dat"
 pediaroute.backward_link_file="modules/core/tokyo/backwardlinks.dat"
